<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_fast_alarm_sheet">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/label"
        android:gravity="start"
        android:fontFamily="@font/lexend_semi_bold"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/input_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/label_hint"
        android:background="@color/home_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp">

        <Button
            android:id="@+id/label_setting_save"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/red" />

        <Button
            android:id="@+id/label_setting_dismiss"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/label_setting_save"
            android:text="@string/dismiss"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:backgroundTint="@color/add_min_btn" />
    </RelativeLayout>

</LinearLayout>