<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="7dp"
    android:id="@+id/alarm_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:checked="true"
            android:fontFamily="@font/lexend_semi_bold"
            android:text="@string/example_alarm_clock"
            android:textSize="40sp"
            android:id="@+id/alarm_switch"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_alarm_24"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:id="@+id/image_clock"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_semi_bold"
                android:text="@string/alarm_date"
                android:textSize="14sp"
                android:id="@+id/alarm_repeat"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/image_clock"/>

            <View style="@style/Divider.Vertical"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="10dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/alarm_repeat"
                android:id="@+id/divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_semi_bold"
                android:text="@string/alarm_label"
                android:textSize="14sp"
                android:id="@+id/alarm_label"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/divider"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/alarm_card_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:icon="@drawable/ic_menu_dots"
                app:iconPadding="0dp"
                app:iconTint="@color/font"/>


        </RelativeLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>